# parallel_elementary_cellular_automata

./: .gitignore  CMakeLists.txt  LICENSE  create_pngs.sh
source/: CA.h  generate_elementary_CA.cpp  safe_queue.h
